# create_autonomy

./: README.md  dependencies.repos  dependencies.txt  requirements.txt
ca_bringup/launch/: minimal.launch
ca_description/launch/: spawn_dock.launch
ca_description/urdf/: create_base.xacro  create_base_gazebo.xacro  create_battery.xacro
ca_description/urdf/dock/: dock.xacro
ca_gazebo/: CMakeLists.txt  package.xml
ca_gazebo/launch/: create_empty_world.launch  ekuthon_coop_robots.launch
ca_gazebo/src/: battery_charger_plugin.cpp
ca_gazebo/test/scripts/: static.py
ca_gazebo/worlds/: two_rooms.world
ca_node/launch/: standalone.launch
ca_tools/launch/: keyboard_teleop.launch
ca_tools/rviz/: config.rviz
docker/create_melodic_nvidia/: Dockerfile
docker/create_ros_melodic_gazebo9/: Dockerfile
docker/create_ubuntu_bionic/: Dockerfile
navigation/ca_behavior_tree/: CMakeLists.txt  README.md  package.xml
navigation/ca_behavior_tree/config/: behavior_tree.xml  test.xml
navigation/ca_behavior_tree/include/ca_behavior_tree/actions/: check_low_battery.h
navigation/ca_behavior_tree/launch/: bt.launch  test.launch
navigation/ca_behavior_tree/src/: main.cpp
navigation/ca_behavior_tree/src/actions/: check_low_battery.cpp  movebase_client.cpp
navigation/ca_cartographer/launch/: mapping_cartographer.launch
navigation/ca_move_base/: package.xml
navigation/ca_move_base/config/: jps_global_planner_params.yaml
navigation/ca_move_base/launch/: move_base.launch  move_base_flex.launch  navigate.launch  octomap_mapping.launch
navigation/ca_planning/: CMakeLists.txt  README.md
navigation/ca_planning/include/ca_planning/: jps_ros.h
navigation/ca_planning/src/: dmp.cpp  jps_ros.cpp
navigation/ca_planning/test/: test_distance_map_planner_2d.cpp
navigation/ca_safety_controller/: CMakeLists.txt  package.xml
navigation/ca_safety_controller/config/: smoother.yaml
navigation/ca_safety_controller/launch/: standalone.launch
navigation/ca_semantic_slam/: CMakeLists.txt  package.xml
navigation/ca_semantic_slam/launch/: orb_slam2.launch  semantic_mapping.launch
navigation/ca_slam/: package.xml
navigation/ca_slam/config/: rtabmap.yaml
navigation/ca_slam/launch/: depthimage_to_laserscan.launch  depthimage_to_laserscan_gazebo.launch  rtab.launch
navigation/ca_vel_mux/: package.xml
navigation/ca_vel_mux/config/: yocs.yaml
navigation/ca_vel_mux/launch/: mux.launch
navigation/create_control/config/: create_2_control.yaml  gazebo_ros_control.yaml
navigation/create_control/include/: create_hw_interface.hpp
navigation/create_control/launch/: create_control.launch
navigation/create_control/src/create_control/: create_control_node.cpp
